feat(icon): add icons to fluent theme

--- a/packages/fluent/scss/index.scss
+++ b/packages/fluent/scss/index.scss
@@ -1,5 +1,4 @@
 // Dependencies
-@use "~@progress/kendo-font-icons/scss/index.scss" with ( $ki-embed-font: true );
 @use "~@progress/kendo-theme-utils/scss/all.scss";
 
 // Core
@@ -7,6 +6,7 @@
 
 // Components
 @use "typography";
+@use "icon";
 @use "button";
 
 // Setup
@@ -15,5 +15,6 @@
 }
 @mixin styles() {
     @include typography.styles();
+    @include icon.styles();
     @include button.styles();
 }
