--- a/packages/fluent/scss/core/_variables.scss
+++ b/packages/fluent/scss/core/_variables.scss
@@ -12,12 +12,49 @@ $use-input-spinner-width: true !default;
 $use-input-spinner-icon-offset: false !default;
 $use-picker-select-width: true !default;
 
+$kendo-spacing: (
+    0: 0,
+    1: .25rem,
+    2: .5rem,
+    3: .75rem,
+    4: 1rem,
+    5: 1.25rem,
+    6: 1.5rem,
+    7: 1.75rem,
+    8: 2rem,
+    9: 2.25rem,
+    10: 2.5rem,
+    11: 2.75rem,
+    12: 3rem,
+    13: 3.25rem,
+    14: 3.5rem,
+    15: 3.75rem,
+    16: 4rem,
+    17: 4.25rem,
+    18: 4.5rem,
+    19: 4.75rem,
+    20: 5rem,
+    21: 5.25rem,
+    22: 5.5rem,
+    23: 5.75rem,
+    24: 6rem,
+    xs: .25rem,
+    sm: .5rem,
+    md: .75rem,
+    lg: 1rem,
+    xl: 1.5rem,
+    thin: .125rem,
+    hair: .0625rem
+) !default;
 
 // Generic styles
 $kendo-font-size: 14px !default;
 $kendo-font-family: "Segoe UI", -apple-system, BlinkMacSystemFont, Roboto, "Helvetica Neue", sans-serif !default;
-$kendo-line-height: ( 20 / 14 ) !default;
+$kendo-line-height: calc( 20 / 14 ) !default;
+
 $kendo-font-weight: 400 !default;
+$kendo-font-weight-bold: 600 !default;
+
 $kendo-letter-spacing: null !default;
 
 $default-scrollbar-width: 17px !default;
@@ -26,6 +63,9 @@ $default-scrollbar-width: 17px !default;
     --kendo-font-size: #{$kendo-font-size};
     --kendo-font-family: #{$kendo-font-family};
     --kendo-line-height: #{$kendo-line-height};
+
     --kendo-font-weight: #{$kendo-font-weight};
+    --kendo-font-weight-bold: #{$kendo-font-weight-bold};
+
     --kendo-letter-spacing: #{$kendo-letter-spacing};
 }
