fix(progressbar): expose width property and set default value
telerik/kendo-themes/issues/3576

--- a/packages/bootstrap/scss/progressbar/_variables.scss
+++ b/packages/bootstrap/scss/progressbar/_variables.scss
@@ -1,5 +1,6 @@
 // Progressbar
 $progressbar-height: $progress-height !default;
+$progressbar-horizontal-width: 100% !default;
 $progressbar-animation-timing: $progress-bar-animation-timing !default;
 $progressbar-border-width: 0px !default;
 $progressbar-font-family: $font-family !default;
