--- a/packages/default/scss/progressbar/_variables.scss
+++ b/packages/default/scss/progressbar/_variables.scss
@@ -1,5 +1,6 @@
 // Progressbar
 $progressbar-height: 22px !default;
+$progressbar-horizontal-width: 100% !default;
 $progressbar-animation-timing: 1s linear infinite !default;
 $progressbar-border-width: 0px !default;
 $progressbar-font-family: $font-family !default;
