--- a/packages/material/scss/progressbar/_variables.scss
+++ b/packages/material/scss/progressbar/_variables.scss
@@ -1,5 +1,6 @@
 // Progressbar
 $progressbar-height: 5px !default;
+$progressbar-horizontal-width: 100% !default;
 $progressbar-animation-timing: null !default;
 $progressbar-border-width: 0px !default;
 $progressbar-font-family: $font-family !default;
