feat(signature): add signature component styles

--- a/packages/default/scss/forms/_layout.scss
+++ b/packages/default/scss/forms/_layout.scss
@@ -142,7 +142,8 @@
 
         .k-multiselect,
         .k-floating-label-container,
-        .k-daterangepicker .k-dateinput {
+        .k-daterangepicker .k-dateinput,
+        .k-signature {
             display: inline-flex;
             width: 100%;
         }
