--- a/packages/fluent/scss/core/color-system/_theme.scss
+++ b/packages/fluent/scss/core/color-system/_theme.scss
@@ -16,6 +16,21 @@ $kendo-component-bg: $kendo-body-bg !default;
 $kendo-component-text: $kendo-body-text !default;
 $kendo-component-border: get-theme-color-var( neutral-30 ) !default;
 
+// States styles
+$kendo-hover-bg: get-theme-color-var( neutral-20 ) !default;
+$kendo-hover-text: get-theme-color-var( neutral-190 ) !default;
+$kendo-hover-border: get-theme-color-var( neutral-20 ) !default;
+
+$kendo-selected-bg: get-theme-color-var( neutral-30 ) !default;
+$kendo-selected-text: get-theme-color-var( neutral-160 ) !default;
+$kendo-selected-border: get-theme-color-var( neutral-130 ) !default;
+
+$kendo-selected-hover-bg: get-theme-color-var( neutral-40 ) !default;
+$kendo-selected-hover-text: get-theme-color-var( neutral-190 ) !default;
+$kendo-selected-hover-border: get-theme-color-var( neutral-130 ) !default;
+
+$kendo-subtle-text: get-theme-color-var( neutral-130 ) !default;
+
 // Shadows
 
 /// Shadow for cards and grid item thumbnails.
@@ -32,8 +47,15 @@ $kendo-box-shadow-depth-3: 0px 1.2px 3.6px rgba( $black, 0.1 ), 0px 6.4px 14.4px
 $kendo-box-shadow-depth-4: 0px 4.8px 14.4px rgba( $black, 0.18 ), 0px 25.6px 57.6px rgba( $black, 0.22 ) !default;
 
 // Link
-$kendo-link-text: get-theme-color-var(primary-130) !default;
-$kendo-link-hover-text: get-theme-color-var(primary-160) !default;
+$kendo-link-text: get-theme-color-var( primary-130 ) !default;
+$kendo-link-hover-text: get-theme-color-var( primary-160 ) !default;
+
+// Validator
+$kendo-invalid-bg: null !default;
+$kendo-invalid-text: get-theme-color-var( error-190 ) !default;
+$kendo-invalid-border: get-theme-color-var( error-190 ) !default;
+$kendo-invalid-shadow: null !default;
+
 
 // Disabled Styling
 $kendo-disabled-bg: get-theme-color-var( neutral-20 ) !default;
@@ -61,4 +83,18 @@ $kendo-disabled-border: transparent !default;
     --kendo-disabled-bg: #{$kendo-disabled-bg};
     --kendo-disabled-text: #{$kendo-disabled-text};
     --kendo-disabled-border: #{$kendo-disabled-border};
+
+    --kendo-hover-bg: #{$kendo-hover-bg};
+    --kendo-hover-text: #{$kendo-hover-text};
+    --kendo-hover-border: #{$kendo-hover-border};
+
+    --kendo-selected-bg: #{$kendo-selected-bg};
+    --kendo-selected-text: #{$kendo-selected-text};
+    --kendo-selected-border: #{$kendo-selected-border};
+
+    --kendo-selected-hover-bg: #{$kendo-selected-hover-bg};
+    --kendo-selected-hover-text: #{$kendo-selected-hover-text};
+    --kendo-selected-hover-border: #{$kendo-selected-hover-border};
+
+    --kendo-subtle-text: #{$kendo-subtle-text};
 }
