fix(utils): change grid-column-span full to 1/-1

--- a/packages/utils/scss/_variables.scss
+++ b/packages/utils/scss/_variables.scss
@@ -272,7 +272,7 @@ $kendo-utils: (
         10: span 10 / span 10,
         11: span 11 / span 11,
         12: span 12 / span 12,
-        full: span 1 / span -1,
+        full: 1 / -1,
         auto: auto
     ),
     "grid-row-start": (
