fix(calendar): focus selector in material

--- a/packages/material/scss/calendar/_theme.scss
+++ b/packages/material/scss/calendar/_theme.scss
@@ -13,7 +13,7 @@
             );
         }
         .k-state-selected.k-state-focused .k-link,
-        .k-selected.k-focused .k-link {
+        .k-selected.k-focus .k-link {
             @include fill(
                 $calendar-cell-selected-text,
                 try-tint($calendar-cell-selected-bg),
