--- a/packages/fluent/scss/button/_theme.scss
+++ b/packages/fluent/scss/button/_theme.scss
@@ -1,22 +1,110 @@
+@use "../core/mixins" as *;
 @use "_variables.scss" as *;
 
 @mixin kendo-button--theme() {
-
     .k-button {
-        outline: var( --INTERNAL--kendo-button-outline, none );
+        --INTERNAL--kendo-button-text: var( --kendo-button-text );
+        --INTERNAL--kendo-button-bg: var( --kendo-button-bg );
+        --INTERNAL--kendo-button-border: var( --kendo-button-border );
+        --INTERNAL--kendo-button-gradient: var( --kendo-button-gradient );
+        --INTERNAL--kendo-button-shadow: var( --kendo-button-shadow );
+
         border-color: var( --INTERNAL--kendo-button-border, initial );
         color: var( --INTERNAL--kendo-button-text, initial );
         background-color: var( --INTERNAL--kendo-button-bg, initial );
-        background-image: linear-gradient( var( --INTERNAL--kendo-button-gradient, transparent, transparent ) );
+        background-image: linear-gradient(
+            var( --INTERNAL--kendo-button-gradient, transparent, transparent )
+        );
         box-shadow: var( --INTERNAL--kendo-button-shadow, none );
-    }
-
-    .k-button-solid-primary {
-        --INTERNAL--kendo-button-bg: var(--kendo-button-solid-primary-bg, #{$kendo-button-solid-primary-bg});
 
         &:hover,
         &.k-hover {
-            --INTERNAL--kendo-button-bg: var(--kendo-button-solid-primary-hover-bg, #{$kendo-button-solid-primary-hover-bg});
+            --INTERNAL--kendo-button-text: var( --kendo-button-hover-text );
+            --INTERNAL--kendo-button-bg: var( --kendo-button-hover-bg );
+            --INTERNAL--kendo-button-border: var( --kendo-button-hover-border );
+        }
+
+        &:focus-visible,
+        &.k-focus {
+            --INTERNAL--kendo-button-text: var( --kendo-button-focus-text );
+            --INTERNAL--kendo-button-bg: var( --kendo-button-focus-bg );
+            --INTERNAL--kendo-button-border: var( --kendo-button-focus-border );
+        }
+        &:focus-visible::after,
+        &.k-focus::after {
+            outline-color: var( --kendo-button-focus-outline, initial );
+        }
+
+        &:active,
+        &.k-active {
+            --INTERNAL--kendo-button-text: var( --kendo-button-active-text );
+            --INTERNAL--kendo-button-bg: var( --kendo-button-active-bg );
+            --INTERNAL--kendo-button-border: var( --kendo-button-active-border );
+        }
+
+        &.k-selected {
+            --INTERNAL--kendo-button-text: var( --kendo-button-selected-text );
+            --INTERNAL--kendo-button-bg: var( --kendo-button-selected-bg );
+            --INTERNAL--kendo-button-border: var( --kendo-button-selected-border );
+        }
+
+        &:disabled,
+        &.k-disabled {
+            --INTERNAL--kendo-button-text: var( --kendo-button-disabled-text );
+            --INTERNAL--kendo-button-bg: var( --kendo-button-disabled-bg );
+            --INTERNAL--kendo-button-border: var( --kendo-button-disabled-border );
+        }
+    }
+
+    @each $fill-mode, $theme-colors in $kendo-button-theme-colors {
+        @each $theme-color, $color-props in $theme-colors {
+            $_text-color: map-get( $color-props, text );
+            $_bg: map-get( $color-props, bg );
+            $_border-color: map-get( $color-props, border );
+
+            $_focus-text: map-get( $color-props, focus-text );
+            $_focus-bg: map-get( $color-props, focus-bg );
+            $_focus-border: map-get( $color-props, focus-border );
+            $_focus-outline: map-get( $color-props, focus-outline );
+
+            $_hover-text: map-get( $color-props, hover-text );
+            $_hover-bg: map-get( $color-props, hover-bg );
+            $_hover-border: map-get( $color-props, hover-border );
+
+            $_active-text: map-get( $color-props, active-text );
+            $_active-bg: map-get( $color-props, active-bg );
+            $_active-border: map-get( $color-props, active-border );
+
+            $_disabled-text: map-get( $color-props, disabled-text );
+            $_disabled-bg: map-get( $color-props, disabled-bg );
+            $_disabled-border: map-get( $color-props, disabled-border );
+
+            .k-button-#{$fill-mode}-#{$theme-color} {
+                --kendo-button-text: var( --kendo-button-#{$fill-mode}-#{$theme-color}-text, #{$_text-color} );
+                --kendo-button-bg: var( --kendo-button-#{$fill-mode}-#{$theme-color}-bg, #{$_bg} );
+                --kendo-button-border: var( --kendo-button-#{$fill-mode}-#{$theme-color}-border, #{$_border-color} );
+
+                --kendo-button-hover-text: var( --kendo-button-#{$fill-mode}-#{$theme-color}-hover-text, #{$_hover-text} );
+                --kendo-button-hover-bg: var( --kendo-button-#{$fill-mode}-#{$theme-color}-hover-bg, #{$_hover-bg} );
+                --kendo-button-hover-border: var( --kendo-button-#{$fill-mode}-#{$theme-color}-hover-border, #{$_hover-border} );
+
+                --kendo-button-focus-text: var( --kendo-button-#{$fill-mode}-#{$theme-color}-focus-text, #{$_focus-text} );
+                --kendo-button-focus-bg: var( --kendo-button-#{$fill-mode}-#{$theme-color}-focus-bg, #{$_focus-bg} );
+                --kendo-button-focus-border: var( --kendo-button-#{$fill-mode}-#{$theme-color}-focus-border, #{$_focus-border} );
+                --kendo-button-focus-outline: var( --kendo-button-#{$fill-mode}-#{$theme-color}-focus-outline, #{$_focus-outline} );
+
+                --kendo-button-active-text: var( --kendo-button-#{$fill-mode}-#{$theme-color}-active-text, #{$_active-text} );
+                --kendo-button-active-bg: var( --kendo-button-#{$fill-mode}-#{$theme-color}-active-bg, #{$_active-bg} );
+                --kendo-button-active-border: var( --kendo-button-#{$fill-mode}-#{$theme-color}-active-border, #{$_active-border} );
+
+                --kendo-button-selected-text: var( --kendo-button-#{$fill-mode}-#{$theme-color}-selected-text, #{$_active-text} );
+                --kendo-button-selected-bg: var( --kendo-button-#{$fill-mode}-#{$theme-color}-selected-bg, #{$_active-bg} );
+                --kendo-button-selected-border: var( --kendo-button-#{$fill-mode}-#{$theme-color}-selected-border, #{$_active-border} );
+
+                --kendo-button-disabled-text: var( --kendo-button-#{$fill-mode}-#{$theme-color}-disabled-text, #{$_disabled-text} );
+                --kendo-button-disabled-bg: var( --kendo-button-#{$fill-mode}-#{$theme-color}-disabled-bg, #{$_disabled-bg} );
+                --kendo-button-disabled-border: var( --kendo-button-#{$fill-mode}-#{$theme-color}-disabled-border, #{$_disabled-border} );
+            }
         }
     }
 
