--- a/packages/fluent/scss/index.scss
+++ b/packages/fluent/scss/index.scss
@@ -97,7 +97,7 @@
 // @use "action-sheet";
 @use "dialog";
 // @use "drawer";
-// @use "notification";
+@use "notification";
 // @use "popover";
 // @use "responsivepanel";
 // @use "tooltip";
@@ -262,7 +262,7 @@
     // @include action-sheet.styles();
     @include dialog.styles();
     // @include drawer.styles();
-    // @include notification.styles();
+    @include notification.styles();
     // @include popover.styles();
     // @include responsivepanel.styles();
     // @include tooltip.styles();
