fix(input): tweak large size so it's compatible with guidelines for mobile

--- a/packages/bootstrap/scss/input/_variables.scss
+++ b/packages/bootstrap/scss/input/_variables.scss
@@ -1,17 +1,34 @@
 // Input
+
+/// Default width of input components.
+/// @group input
 $kendo-input-default-width: 100% !default;
 
+/// Border width of input components.
+/// @group input
 $kendo-input-border-width: $input-border-width !default;
 $kendo-input-border-height: ( $kendo-input-border-width * 2 ) !default;
+/// Border radius of input components.
+/// @group input
 $kendo-input-border-radius: null !default;
 
+/// Horizontal padding of input components.
+/// @group input
 $kendo-input-padding-x: $input-padding-x !default;
+/// Vertical padding of input components.
+/// @group input
 $kendo-input-padding-y: $input-padding-y !default;
+/// Font family of input components.
+/// @group input
 $kendo-input-font-family: $font-family !default;
+/// Font size of input components.
+/// @group input
 $kendo-input-font-size: $font-size !default;
+/// Line height of input components.
+/// @group input
 $kendo-input-line-height: $input-line-height !default;
 
-$kendo-input-padding-x-sm: $input-padding-x !default;
+$kendo-input-padding-x-sm: $input-padding-x-sm !default;
 $kendo-input-padding-y-sm: $input-padding-y-sm !default;
 $kendo-input-font-size-sm: $font-size-md !default;
 $kendo-input-line-height-sm: $line-height-md !default;
@@ -21,7 +38,7 @@ $kendo-input-padding-y-md: $input-padding-y !default;
 $kendo-input-font-size-md: $font-size-md !default;
 $kendo-input-line-height-md: $line-height-md !default;
 
-$kendo-input-padding-x-lg: $input-padding-x !default;
+$kendo-input-padding-x-lg: $input-padding-x-lg !default;
 $kendo-input-padding-y-lg: $input-padding-y-lg !default;
 $kendo-input-font-size-lg: $font-size-md !default;
 $kendo-input-line-height-lg: $line-height-md !default;
