--- a/packages/material/scss/list/_variables.scss
+++ b/packages/material/scss/list/_variables.scss
@@ -3,16 +3,16 @@
 /// Font size of the list component, if no size is set.
 /// @group list
 $kendo-list-font-size: null !default;
-$kendo-list-font-size-sm: $font-size-lg !default;
-$kendo-list-font-size-md: $font-size-lg !default;
+$kendo-list-font-size-sm: $font-size-md !default;
+$kendo-list-font-size-md: $font-size-md !default;
 $kendo-list-font-size-lg: $font-size-lg !default;
 
 /// Line height of the list component, if no size is set.
 /// @group list
 $kendo-list-line-height: null !default;
-$kendo-list-line-height-sm: 1.25 !default;
-$kendo-list-line-height-md: 1.25 !default;
-$kendo-list-line-height-lg: 1.25 !default;
+$kendo-list-line-height-sm: (20 / 14) !default;
+$kendo-list-line-height-md: (20 / 14) !default;
+$kendo-list-line-height-lg: 1.5 !default;
 
 /// Horizontal padding of list header, if no size is set.
 /// @group list
@@ -28,7 +28,7 @@ $kendo-list-header-padding-y: null !default;
 $kendo-list-header-padding-y-base: map-get( $spacing, 2 ) !default;
 $kendo-list-header-padding-y-sm: map-get( $spacing, 2 ) - map-get( $spacing, thin ) !default;
 $kendo-list-header-padding-y-md: map-get( $spacing, 2 ) !default;
-$kendo-list-header-padding-y-lg: map-get( $spacing, 2 ) + map-get( $spacing, thin ) !default;
+$kendo-list-header-padding-y-lg: map-get( $spacing, 2 ) !default;
 
 /// Border width of list header.
 /// @group list
@@ -66,7 +66,7 @@ $kendo-list-item-padding-y: null !default;
 $kendo-list-item-padding-y-base: map-get( $spacing, 2 ) !default;
 $kendo-list-item-padding-y-sm: map-get( $spacing, 2 ) - map-get( $spacing, thin ) !default;
 $kendo-list-item-padding-y-md: map-get( $spacing, 2 ) !default;
-$kendo-list-item-padding-y-lg: map-get( $spacing, 2 ) + map-get( $spacing, thin ) !default;
+$kendo-list-item-padding-y-lg: map-get( $spacing, 2 ) !default;
 
 /// Font size of list items, if no size is set.
 /// @group list
