fix(bootstrap): align spacing and font size in button input and chip

--- a/packages/bootstrap/scss/button/_variables.scss
+++ b/packages/bootstrap/scss/button/_variables.scss
@@ -26,8 +26,8 @@ $kendo-button-line-height: $btn-line-height !default;
 
 $kendo-button-padding-x-sm: $btn-padding-x-sm !default;
 $kendo-button-padding-y-sm: $btn-padding-y-sm !default;
-$kendo-button-font-size-sm: $font-size-md !default;
-$kendo-button-line-height-sm: $line-height-md !default;
+$kendo-button-font-size-sm: $font-size-sm !default;
+$kendo-button-line-height-sm: ( 20 / 14 ) !default;
 
 $kendo-button-padding-x-md: $btn-padding-x !default;
 $kendo-button-padding-y-md: $btn-padding-y !default;
