--- a/packages/bootstrap/scss/input/_variables.scss
+++ b/packages/bootstrap/scss/input/_variables.scss
@@ -30,8 +30,8 @@ $kendo-input-line-height: $input-line-height !default;
 
 $kendo-input-padding-x-sm: $input-padding-x-sm !default;
 $kendo-input-padding-y-sm: $input-padding-y-sm !default;
-$kendo-input-font-size-sm: $font-size-md !default;
-$kendo-input-line-height-sm: $line-height-md !default;
+$kendo-input-font-size-sm: $font-size-sm !default;
+$kendo-input-line-height-sm: ( 20 / 14 ) !default;
 
 $kendo-input-padding-x-md: $input-padding-x !default;
 $kendo-input-padding-y-md: $input-padding-y !default;
